Weapon class sterted

--- a/UnrealShooter/Config/DefaultGame.ini
+++ b/UnrealShooter/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ MaxPlayers=100
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
+BuildTarget=UnrealShooter
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
